# sea-of-stars-tas

./: '  .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  config.yaml.example  flake.nix
.github/workflows/: clippy.yml  release.yml  rust-clippy.yml  rust.yml
crates/data/: .gitignore
crates/data/scripts/item-parser/: README.md  item-parser.js
crates/data/scripts/level-up-table-parser/: README.md  level-up-table-parser.js
crates/data/src/: characters.rs  items.rs  lib.rs
crates/data/src/level_up_tables/: bst.rs  garl.rs  mod.rs  reshan.rs  serai.rs  valere.rs  zale.rs
crates/joystick/: Cargo.toml
crates/joystick/src/: common.rs  lib.rs  linux.rs  mapping.rs  windows.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  memory_manager.rs  pe.rs  process.rs  process_list.rs  signature.rs  string.rs  watcher.rs
crates/memory/src/game_engine/: il2cpp.rs  mod.rs
crates/memory/src/game_engine/il2cpp/: mod.rs  unity_items.rs  unity_list.rs  unity_serializable_dictionary.rs
crates/memory/src/game_engine/scene/: mod.rs
crates/memory/src/game_engine/unity/: mod.rs
crates/memory/src/memory_manager/: il2cpp.rs  mod.rs  unity.rs
crates/seq/: Cargo.toml
crates/seq/src/: flow.rs  lib.rs  logging.rs  sequencer.rs  wait.rs
scripts/item-parser/: item-parser.js
src/: config.rs  control.rs  game_manager.rs  gui.rs  level_up.rs  main.rs  state.rs
src/assets/: mod.rs
src/combat/: mod.rs
src/combat/controllers/: basic_encounter_controller.rs  mod.rs
src/controllers/: mod.rs
src/gui/: mod.rs
src/gui/helpers/: combat_helper.rs  debug_helper.rs  inventory_helper.rs  level_up_helper.rs  main.rs  main_helper.rs  mod.rs  nav_helper.rs  route_helper_v1.rs  seq_helper.rs  shop_helper.rs  title.rs  title_helper.rs
src/memory/: boat_manager.rs  combat_manager.rs  currency_manager.rs  cutscene_manager.rs  inventory_manager.rs  level_manager.rs  level_up_manager.rs  memory_context.rs  memory_manager.rs  mod.rs  new_dialog_manager.rs  player_party_manager.rs  shop_manager.rs  speedrun_manager.rs  time_of_day_manager.rs  title_sequence_manager.rs
src/memory/objects/: character.rs  mod.rs
src/memory/objects/items/: armor.rs  item.rs  mod.rs
src/route/: mod.rs  tas.rs
src/route/evermist_island/: change_time_tutorial.rs  diploma.rs  elder_mist.rs  forbidden_cave.rs  mod.rs  mooncradle.rs  mountain_trail.rs
src/route/sleeper_island/: mod.rs
src/seq/: branch.rs  button.rs  dialog.rs  loot.rs  mod.rs  movement.rs  relics.rs  title.rs
src/static/: relics.rs
src/util/: math.rs  mod.rs  quaternion.rs  time_formatter.rs
