[package]
name = "sea-of-stars-tas"
version = "0.1.0"
edition = "2021"

[dependencies]
joystick = { path = "crates/joystick", version = "0.1.0" }
memory = { path = "crates/memory", version = "0.1.0" }
data = { path = "crates/data", version = "0.1.0" }
bytemuck = { version = "1.18.0", features = ["min_const_generics"] }
seq = { path = "crates/seq", version = "0.1.0" }
sysinfo = { version = "0.32.0", default-features = false, features = ["system", "multithread"] }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
] }
egui_dock = "0.14.0"
colog = "1.3.0"
log = "0.4.22"
puffin_egui = "0.29.0"
yaml-rust2 = "0.9.0"
vec3-rs = "0.1.6"
libm = "0.2.8"
toml = "0.8.19"
toml_edit = "0.22.22"
itoa = "1.0.11"
delta = "0.2.1"
itertools = "0.13.0"

[dependencies.winit]
# version = "*"
version = "=0.30.5"
features = ["default"]

[workspace]
members = [ "crates/data",
  "crates/joystick",
  "crates/memory"
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true

