[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.18.0", features = ["min_const_generics"] }
memchr = "2.7.4"
proc-maps = "0.3.0"
read-process-memory = "0.1.6"
sysinfo = { version = "0.32.0", default-features = false, features = ["system", "multithread"] }
